第十二次提交 后台评论管理页面，用户编辑、删除自己帖子功能实现

--- a/src/main/resources/templates/admin/commentManage.html
+++ b/src/main/resources/templates/admin/commentManage.html
@@ -21,64 +21,48 @@
                             <table class="layui-table" style="width: 1650px;" lay-even lay-skin="nob">
                                 <colgroup>
                                     <col width="50">
+                                    <col width="5">
                                     <col width="100">
                                     <col width="100">
                                     <col width="100">
                                     <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                    <col width="100">
-                                </colgroup>
-                                <thead>
+                                  </colgroup>
+                                  <thead>
                                     <tr>
-                                        <th style="text-align: center;"><button id="selectButton" onclick="selectAll()"
-                                                class="layui-btn layui-btn-sm">全选</button></th>
-                                        <th>ID</th>
-                                        <th>登录名</th>
-                                        <th>昵称</th>
-                                        <th>性别</th>
-                                        <th>地区</th>
-                                        <th>签名</th>
-                                        <th>用户状态</th>
-                                        <th>上次登录时间</th>
-                                        <th>注册时间</th>
-                                    </tr>
-                                </thead>
+                                      <th style="text-align: center;"><button id="selectButton" onclick="selectAll()" class="layui-btn layui-btn-sm">全选</button></th>
+                                      <th>ID</th>
+                                      <th>评论帖子</th>
+                                      <th>评论者</th>
+                                      <th>评论状态</th>
+                                      <th>评论时间</th>
+                                    </tr> 
+                                  </thead>
                                 <tbody>
-                                    <th:block th:unless="${#lists.isEmpty(users)}">
-                                        <th:block th:each=" u, uStat : ${users}">
+                                    <th:block th:unless="${#lists.isEmpty(comments)}">
+                                        <th:block th:each=" c, cStat : ${comments}">
                                             <th:block
-                                                th:if="${uStat.index} ge ((${page} - 1) * 10) and ${uStat.index} lt (${page} * 10)">
+                                                th:if="${cStat.index} ge ((${page} - 1) * 10) and ${cStat.index} lt (${page} * 10)">
                                                 <tr>
-                                                    <td style="text-align: center;"><input th:value="${u.id}"
-                                                            name="userId" type="checkbox"></td>
-                                                    <td th:text="${u.id}">4</td>
-                                                    <td th:text="${u.loginName}">rgbugegjcmu@163.com</td>
-                                                    <td th:text="${u.nickName}">棠槿牵樱</td>
-                                                    <td th:text="${u.gender}">未知</td>
-                                                    <td th:text="${u.location}">未知</td>
-                                                    <td th:text="${u.introduce}">这个人很懒，什么都没留下~</td>
-                                                    <th:block th:if="${u.userStatus == 0}">
-                                                        <td><span class="layui-bg-green" style="padding: 5px;">正常</span>
-                                                        </td>
+                                                    <td style="text-align: center;"><input th:value="${c.id}" name="commentId" type="checkbox"></td>
+                                                    <td th:text="${c.id}">4</td>
+                                                    <td th:text="${#strings.abbreviate(articles[c.postId].title, 15)}" th:title="${articles[c.postId].title}">rgbugegjcmu@163.com</td>
+                                                    <td th:text="${users[c.userId].nickName} + ' id:' + ${c.userId}">棠槿牵樱</td>
+                                                    <th:block th:if="${c.isDeleted == 0}">
+                                                        <td><span class="layui-bg-green" style="padding: 5px;">已审核</span></td>
                                                     </th:block>
-                                                    <th:block th:if="${u.userStatus == 1}">
-                                                        <td><span class="layui-bg-red" style="padding: 5px;">冻结</span>
-                                                        </td>
+                                                    <th:block th:if="${c.isDeleted == 1}">
+                                                        <td><span class="layui-bg-red" style="padding: 5px;">未审核</span></td>
                                                     </th:block>
-                                                    <td th:text="${u.lastLoginTime}">2022-06-05 19:45:11</td>
-                                                    <td th:text="${u.createTime}">2022-05-19 08:59:15</td>
-                                                </tr>
+                                                    <td th:text="${c.createTime}">2022-06-07 16:36:27</td>
+                                                  </tr>
                                             </th:block>
                                         </th:block>
                                     </th:block>
                                 </tbody>
                             </table>
-                            <button onclick="freezeUser()" class="layui-btn">冻结用户</button>
-                            <button onclick="unFreezeUser()" class="layui-btn">解冻用户</button>
-                            <button onclick="deleteUser()" class="layui-btn layui-bg-red">删除用户</button>
+                            <button onclick="unFreezeComment()" class="layui-btn">通过审核</button>
+                            <button onclick="freezeComment()" class="layui-btn">取消审核</button>
+                            <button onclick="deleteComment()" class="layui-btn layui-bg-red">删除评论</button>
                             <div style="text-align: center;">
                                 <div id="Claypage"></div>
                             </div>
@@ -107,14 +91,14 @@
             var $ = layui.$
 
             window.selectAll = function () {
-                $("[name = 'userId']").prop("checked", 'checked')
+                $("[name = 'commentId']").prop("checked", 'checked')
                 $('#selectButton').attr('onclick', 'selectAllCancle()')
                 $('#selectButton').attr('class', 'layui-btn layui-btn-sm layui-bg-red')
                 $('#selectButton').html("取消")
             }
 
             window.selectAllCancle = function () {
-                $("[name = 'userId']").removeAttr('checked')
+                $("[name = 'commentId']").removeAttr('checked')
                 $('#selectButton').attr('onclick', 'selectAll()')
                 $('#selectButton').attr('class', 'layui-btn layui-btn-sm')
                 $('#selectButton').html("全选")
@@ -122,22 +106,22 @@
 
             window.getChecked = function () {
                 var chk_value = [];
-                $('input[name = "userId"]:checked').each(function () {
+                $('input[name = "commentId"]:checked').each(function () {
                     chk_value.push($(this).val());
                 });
                 var is_checked = chk_value.join(',');
                 return is_checked
             }
 
-            window.unFreezeUser = function () {
+            window.unFreezeComment = function () {
                 var arr_id = getChecked()
                 console.log(arr_id)
                 if (arr_id == null) {
-                    layer.alert('请选择要解冻的用户!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    layer.alert('请选择要审核的评论!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
                     return false;
                 }
 
-                var url = '/admin/unFreezeUser'
+                var url = '/comment/unFreezeComment'
                 var params = {
                     "arr_id": arr_id
                 }
@@ -158,15 +142,15 @@
                 });
             }
 
-            window.freezeUser = function () {
+            window.freezeComment = function () {
                 var arr_id = getChecked()
                 console.log(arr_id)
                 if (arr_id == null) {
-                    layer.alert('请选择要冻结的用户!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    layer.alert('请选择要取消审核的评论!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
                     return false;
                 }
 
-                var url = '/admin/freezeUser'
+                var url = '/comment/freezeComment'
                 var params = {
                     "arr_id": arr_id
                 }
@@ -187,15 +171,15 @@
                 });
             }
 
-            window.deleteUser = function () {
+            window.deleteComment = function () {
                 var arr_id = getChecked()
                 console.log(arr_id)
                 if (arr_id == null) {
-                    layer.alert('请选择要删除的用户!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    layer.alert('请选择要删除的评论!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
                     return false;
                 }
                 layer.confirm('真的要删除所选数据吗', { btn: ['确定', '取消'], title: "提示" }, function () {
-                    var url = '/admin/deleteUser'
+                    var url = '/comment/deleteComment'
                     var params = {
                         "arr_id": arr_id
                     }
@@ -227,7 +211,7 @@
                 curr: page,
                 jump: function (obj, first) {
                     if (!first) {
-                        window.location.href = '/admin/userManage?page=' + obj.curr
+                        window.location.href = '/admin/commentManage?page=' + obj.curr
                     }
                 }
             });
