--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -41,7 +41,7 @@
                     <a th:href="@{/admin/articleManage}">帖子管理</a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">评论管理</a>
+                    <a th:href="@{/admin/commentManage}">评论管理</a>
                 </li>
             </ul>
         </div>
